syntax = "proto3";

package protos.domain;

option go_package = "github.com/wanpng/mq-producer-service/grpc/domain";

message JobseekerProfile {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string photo_url = 4;
    bool is_land_owner = 5;
    int32 province_id = 6;
    string province = 7;
}