syntax = "proto3";

package protos.domain;

option go_package = "github.com/wanpng/mq-producer-service/grpc/domain";

message Training {
    string institution = 1;
    string training = 2;
    string description = 3;
}

message JobseekerTraining {
    string id = 1;
    repeated Training trainings = 2;
}

message JobseekerTrainingDelete {
    string id = 1;
    Training training = 2;
}